[add] prevent user setting image too large in editor

--- a/app/assets/stylesheets/pages/_diary.css.sass
+++ b/app/assets/stylesheets/pages/_diary.css.sass
@@ -47,6 +47,7 @@
     img
       display: block
       max-width: 70%
+      height: auto !important
       margin: 25px auto
       border: 5px solid #fff
       +box-shadow(0 0 3px #888)
